--- a/Deliverable 1.tex
+++ b/Deliverable 1.tex
@@ -64,12 +64,12 @@ Describe the problem that is to be approached.
 %was in the correct position, denoted as a green highlight, or is contained within the word but not in the correct position, denoted with a yellow highlight.
 \justify{
 Mastermind is a two-player coded-breaking game in which one player is tasked with discovering a secret combination set by the other player.
-The puzzle is a member of problems known as combinatorial probles where the goal is to find the correct combination of elements from a finite
+The puzzle is a member of problems known as combinatorial problems where the goal is to find the correct combination of elements from a finite
 set to satisfy a given set of conditions. The process of investigating possible solutions to the Mastermind puzzle has been underway for decades
 however there exists some difficulties in defining a clear solution to this day. The implementation of a solution to the Mastermind puzzle would provide
-benefits to severeal problems face in many sectors of the real world such as cyber security which retains the solutions value as a goal worth seeking.
-Currently the challenges that are being faced in this endeavour relate to finding methods of determing the correct decisions to be made when formulating
-guesses at each step of the puzzle. Several attempts at definind a solution have yeilded promising results yet a common occurence is that these
+benefits to several problems faced in many sectors of the real world such as cyber security which retains the solutions value as a goal worth seeking.
+Currently the challenges that are being faced in this endeavour relate to finding methods of determining the correct decisions to be made when formulating
+guesses at each step of the puzzle. Several attempts at defining a solution have yielded promising results yet a common occurrence is that these
 implementations struggle when attempting to address variations of the standard Mastermind puzzle.
 
 The implementation that this project seeks to develop will use the foundations provided by the advancements made until the present day. An implementation
@@ -87,9 +87,9 @@ iterations. An in depth explanation of the chosen aims and objectives are as suc
 
 \
 
- The goal to find a solution to the problem which minimizes the number of guesses required to discover the correct combination of 
-pegs which comprise the code. Intially the goal will be to derive a base solution to the Mastermind puzzle. The base solution being the 
-most intuitive solution to the problem which does not aim to be the most efficient but to provide a foundation on which improvements 
+The goal to find a solution to the problem which minimises the number of guesses required to discover the correct combination of
+pegs which comprise the code. Initially the goal will be to derive a base solution to the Mastermind puzzle. The base solution being the
+most intuitive solution to the problem which does not aim to be the most efficient but to provide a foundation on which improvements
 can be made. The following objectives are associated with this aim:
 
 \
@@ -98,10 +98,10 @@ can be made. The following objectives are associated with this aim:
 
 \
 
-The Mastermind puzzle has previously been the subject of similar research regarding the ability to efficiently find the correct code 
-combination. This stage of the project will concern itself with investigating these previous implementations to guide the project. 
+The Mastermind puzzle has previously been the subject of similar research regarding the ability to efficiently find the correct code
+combination. This stage of the project will concern itself with investigating these previous implementations to guide the project.
 Through exploring the methods utilised in other investigations into this problem the areas in which these solutions are lacking or could
-be improved can be found. The research presented in this report represents the progress of this objective.
+improvements can be found. The research presented in this report represents the progress of this objective.
 
 \
 
@@ -109,8 +109,8 @@ be improved can be found. The research presented in this report represents the p
 
 \
 
-The ideal base solution should acheive the basic goal of arriving at the correct code combination but should not be the most elegant 
-solution at this point. Instead the base solution should be the foundation for which improvements are made in later iterations. 
+The ideal base solution should achieve the basic goal of arriving at the correct code combination but should not be the most elegant
+solution at this point. Instead the base solution should be the foundation for which improvements are made in later iterations.
 The base solution will be guided through the research conducted through objective 1.A.
 
 \
@@ -119,23 +119,24 @@ The base solution will be guided through the research conducted through objectiv
 
 \
 
-The next step following the creation of a base solution is the optimization of this implementation. The goal with optimization is to discover 
-new methods of how the solution can be improved in regards to its efficiency. In the context of the Mastermind puzzle the concept of a 
-search space is an important factor to optimization as it refers to the set of possible codes which satisfy the problem. An example of how 
-the solution could be optimized is by considering ways in which this search space could be either minimized or how the navigation of the 
+The next step following the creation of a base solution is the optimization of this implementation. The goal with optimization is to discover
+new methods of how the solution can be improved in regards to its efficiency. In the context of the Mastermind puzzle the concept of a
+search space is an important factor to optimization as it refers to the set of possible codes which satisfy the problem. An example of how
+the solution could be optimised is by considering ways in which this search space could be either minimised or how the navigation of the
 space can be improved.
 
-\
-
-\textbullet\ Objective 2.A: Explore Methods of Optimizing the Search Space.
 
 \
 
-The optimization of the problem's search space is directly linked to the measure of efficiency when considering Mastermind solutions. 
-An of how this can be achieved is by implementing methods of minimizing the search space such that the quantity of possible codes 
-which could satisfy the problem is reduced. The other method that should be investigated is improvements to how the search space 
-is navigated by the solution. This is a method which relates heavily to the concept of heuristics and assigning values to the items within 
-the search space which will be covered in a later section of this report. These are not the only methods that exist to optimize the 
+\textbullet\ Objective 2.A: Explore Methods of Optimising the Search Space.
+
+\
+
+The optimization of the problem's search space is directly linked to the measure of efficiency when considering Mastermind solutions.
+An of how this can be achieved is by implementing methods of minimising the search space such that the quantity of possible codes
+which could satisfy the problem. The other method that should be investigated is improvements to how the search space
+is navigated by the solution. This is a method which relates heavily to the concept of heuristics and assigning values to the items within
+the search space which will be covered in a later section of this report. These are not the only methods that exist to optimise the
 search space and the exploration of differing methods is to be encouraged and sought out should it be possible.
 
 \
@@ -144,10 +145,11 @@ search space and the exploration of differing methods is to be encouraged and so
 
 \
 
-To achieve the goal of optimizing the solution it is important to define the elements which are being optimized for. An example of 
-this is already defined by the previous objective in regards to search space however this is not the only area which can be optimized. 
-The question that is to be answered by this objective is how other factors such as the speed at which a solution can reach a code 
+To achieve the goal of optimising the solution it is important to define the elements which are being optimised for. An example of
+This is already defined by the previous objective in regards to search space however this is not the only area which can be optimised.
+The question that is to be answered by this objective is how other factors such as the speed at which a solution can reach a code
 which satisfies the problem should be considered.
+
 
 \
 
@@ -167,7 +169,7 @@ method should be presented as a component of this objective.
 
 This aim constitutes the final stages of the project. During this stage a final solution should be implementation with appropriate reasoning 
 as to the optimizations which will be compared to already existing solutions. The comparison process should provide insight into the 
-areas which could still be optimized.
+areas which could still be optimised.
 
 \
 
@@ -175,9 +177,10 @@ areas which could still be optimized.
 
 \
 
-The evaluation process should consider the optimization methods implemented during the development of each solution iteration. It is important 
-that the evaluation process considers factors in which the solution can be compared to similar solutions as to provide reasoning for why one 
-solution may be an improvement over another. This objective is covered in the Evaluation Strategy chapter later in this report
+The evaluation process should consider the optimization methods implemented during the development of each solution iteration. It is important
+that the evaluation process considers factors in which the solution can be compared to similar solutions as to provide reasoning for why one
+a solution may be an improvement over another. This objective is covered in the Evaluation Strategy chapter later in this report
+
 
 \
 
@@ -185,7 +188,7 @@ solution may be an improvement over another. This objective is covered in the Ev
 
 \
 
-The evaluation process provides insight in how an optimization procedure may have given one solution an advantage over a similar implementation. 
+The evaluation process provides insight into how an optimization procedure may have given one solution an advantage over a similar implementation.
 The results of the process should be communicated clearly such that these insights can be reasoned and explained.
 
 \
@@ -194,10 +197,10 @@ The results of the process should be communicated clearly such that these insigh
 
 \
 
-This aim and its associated objectives are intended to be goals which are desired to be included with the results of the project but are not fundamental 
-to the investigation. These objectives should be pursued if the time allows for these areas to be explored. The topic of investigation for this aim is to 
-explore how variations of the Mastermind puzzle can be processed by the solution implemented in this project. Possible optimization methods in 
-respect to these changes should be documented and communicated alongside the challenges encountered.
+A topic that is a recurring source of intrigue with similar research into the Mastermind puzzle is the potential for a solution to scale with
+changes in the way that the code is constructed. One such change relates to the possible set of symbols which the code could contain.
+This objective should consider methods of how the solution can adapt when the number of possible symbols increases above the standard six.
+
 
 \
 
@@ -205,9 +208,9 @@ respect to these changes should be documented and communicated alongside the cha
 
 \
 
-A topic that is a recurring source of intrigue with similar research into the Mastermind puzzle is the potential for a solution to scale with 
-changes in the way that the code is constructed. One such change relates to the possible set of symbols which the code could contain. 
-This objective should consider methods of how the solution can adapt when the number of possible symbol increases above the standard six.
+A topic that is a recurring source of intrigue with similar research into the Mastermind puzzle is the potential for a solution to scale with
+changes in the way that the code is constructed. One such change relates to the possible set of symbols which the code could contain.
+This objective should consider methods of how the solution can adapt when the number of possible symbols increases above the standard six.
 
 \
 
@@ -224,7 +227,7 @@ The considerations regarding this objective relate to the ways in how a solution
 
 \
 
-The solution implemented in this project could have applications beyond the intial Mastermind puzzle. 
+The solution implemented in this project could have applications beyond the initial  Mastermind puzzle. 
 This objective is concerned with how the solution can be applied to other similar problems, an example of such a puzzle would be the popular language game Wordle \cite{Wordle}.
 
 %
@@ -237,14 +240,15 @@ This objective is concerned with how the solution can be applied to other simila
 % Summary of the background material and introduction to the section
 The Mastermind puzzle has been subject to investigations regarding solutions to the code-breaking aspect of the game
 since its release.
-This section will provide background material which aims to give context to the aims and objectives of this project. 
-The project was inspired by a paper exploring sudoku solutions from a series of problems known as functional pearls, 
-the processes used to derive those solutions will be used to guide this project in this current stage. 
-Following this brief introduction is an explanation of the game Mastermind which the solution will be derived from along 
-with references to previous work by others. The previous work examined will focus on the specific area of search spaces 
-in regards to finding the optimal best move at each position in the puzzle. At the conclusion of this section the goal is 
+This section will provide background material which aims to give context to the aims and objectives of this project.
+The project was inspired by a paper exploring sudoku solutions from a series of problems known as functional pearls,
+The processes used to derive those solutions will be used to guide this project in this current stage.
+Following this brief introduction is an explanation of the game Mastermind which the solution will be derived from along
+with references to previous work by others. The previous work examined will focus on the specific area of search spaces
+in regards to finding the optimal best move at each position in the puzzle. At the conclusion of this section the goal is
 that the reader has an understanding of the important concepts relating to this project such that the aims and objectives
-are clear in their feasability and relevancy.
+are clear in their feasibility and relevancy.
+
 
 %%% What is the problem?
 % What is the goal of Mastermind that our solution will be modelled on?
@@ -264,7 +268,7 @@ of six coloured pegs \cite{Wolfram}.
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.5]{pegs}
-\caption{ Example codes which would satisfy the contraints of the standard variant of Mastermind.}
+\caption{ Example codes which would satisfy the constraints of the standard variant of Mastermind.}
 \end{figure}
 
 The codebreaker would attempt several guesses by constructing codes of a similar shape and rewarded with clues as to how closely their guess resembled the hidden code.
@@ -286,7 +290,7 @@ within a limit of guesses.
 
 
 % Why is a solution to this problem important?
-The game can be treated as a individual puzzle in the absence of a human $CM$ through randomly generated code combinations. This project aims to implement a solution to this puzzle that can search for the correct code combination that is comparable with exisiting solutions. The act of searching for the correct code in this context is known as a combinatorial optimization problem with a wide range of applications \cite{Haystack} and it is because of this applicability that the search for a solution is subject to continued investigation.
+The game can be treated as an individual puzzle in the absence of a human $CM$ through randomly generated code combinations. This project aims to implement a solution to this puzzle that can search for the correct code combination that is compatible with existing solutions. The act of searching for the correct code in this context is known as a combinatorial optimization problem with a wide range of applications \cite{Haystack} and it is because of this applicability that the search for a solution is subject to continued investigation.
 
 \subsection {Problem Description and Fundamental Concepts}
 
@@ -299,7 +303,7 @@ for c colours and a combination of length s.
 
 \subsubsection {Combinatorial Search Spaces}
 
-A complication encountered by previous attempts to develop a solution is the increased strain that larger search space place on the algorithms that traverse them with respect to time and memory. Consider the standard variant of Mastermind which as stated before results in a search space population of 1296 combinations. Adding a single new element to the set of possible combination members increases the population to 2041 however incrementing the code length will result in exponential growth increasing the search space instead to 7776. 
+A complication encountered by previous attempts to develop a solution is the increased strain that larger search space places on the algorithms that traverse them with respect to time and memory. Consider the standard variant of Mastermind which as stated before results in a search space population of 1296 combinations. Adding a single new element to the set of possible combination members increases the population to 2041 however incrementing the code length will result in exponential growth increasing the search space instead to 7776.
 
 
 \subsubsection {Risks in Searching}
@@ -308,7 +312,7 @@ A complication encountered by previous attempts to develop a solution is the inc
 
 \par One of the earliest proposed solutions to the Mastermind puzzle was a paper by Donald E. Knuth in which the claim is made that it is possible in all cases for the $CB$ to find the correct code within five attempts \cite {Wolfram} \cite {Knuth}. The solution introduces a concept which is important to solving search problems known as the \emph{consistent search space}, a term which would be defined further in later work \cite{Merelo}. The standard variant of Mastermind assumes that the code is of length four with six possible elements it can be constructed from. This definition would mean the code constructed by the $CM$ would be one of $6^4 = 1296$ possible combinations, this set of combinations is referred to as the \emph search space of the puzzle. 
 
-\par The algorithm that Knuth proposes seeks to restrict this search space after each guess using the feedback provided by the $CM$. The algorithm proceeds after each guess by picking the best possible choice for the subsequent guess at each step, this greedy strategy \cite {Wolfram} is possible as the feedback provided can eliminate combinations which are not consistent with previously guesses. 
+\par The algorithm that Knuth proposes seeks to restrict this search space after each guess using the feedback provided by the $CM$. The algorithm proceeds after each guess by picking the best possible choice for the subsequent guess at each step; this greedy strategy \cite {Wolfram} is possible as the feedback provided can eliminate combinations which are not consistent with previous guesses.
 
 \par The first stage of Knuth's investigation was to define the rules of the game in a way that a computer would be able to understand. First defining the two important variables being the code $x_1 x_2 x_3 x_4$ and the test pattern, or guess, $y_1 y_2 y_3 y_4$ The initial rules that were derived were as follows:
 \begin {itemize}
@@ -327,7 +331,7 @@ No. of Guesses & Test Pattern &  Hits  & Possible Combinations \\
 2 & 1213 &  BWW  &  4 \\
 \end {tabular} \par 
 } 
-At the initial point where no guess had been made the search space is still comprised of all 1296 possible code combinations. This space of possible combinations is restricted using the result of the first guess which states that three of the chosen symbols were correct however their positions were incorrect. This information allows a great amount of restriction to only 16 possible code combinations which the code could belong to. The second guess restricting this space even further to just four possible combinations. Through this method Knuth asserted that it should be possible to achieve a correct guess within five test patterns. The starting pattern discovered by Knuth to give proof to this claim was found to be 1122. A possible progression of stages from this initial test pattern would be:
+At the initial point where no guess had been made the search space is still composed of all 1296 possible code combinations. This space of possible combinations is restricted using the result of the first guess which states that three of the chosen symbols were correct however their positions were incorrect. This information allows a great amount of restriction to only 16 possible code combinations which the code could belong to. The second guess restricts this space even further to just four possible combinations. Through this method Knuth asserted that it should be possible to achieve a correct guess within five test patterns. The starting pattern discovered by Knuth to give proof to this claim was found to be 1122. A possible progression of stages from this initial test pattern would be:
 Another example is as follows:
 \\
 {
@@ -340,7 +344,7 @@ No. of Guesses & Test Pattern &  Hits  & Possible Combinations \\
 1 & 3526 &  W  &  7 \\
 \end {tabular} \par 
 }
-This situation would also allow for the next test pattern to distuingish the final possible combinations using the test pattern 1462. The algorithm places a high value on test patterns which coax the process towards the fourth guess being able to distinguish between the possible combinations. This method of solving the problem however is admitted within the paper to not be the most optimal solution. This can be shown by the way that the algorithm processes the following situation:
+This situation would also allow for the next test pattern to distinguish the final possible combinations using the test pattern 1462. The algorithm places a high value on test patterns which coax the process towards the fourth guess being able to distinguish between the possible combinations. This method of solving the problem however is admitted within the paper to not be the most optimal solution. This can be shown by the way that the algorithm processes the following situation:
 \\
 {
 \centering
@@ -391,7 +395,8 @@ The most common way this area is implemented is through the use of Evolutionary 
 \subsubsection {Advantages of Functional Programming}
 
 \subsubsection {Functional Pearls}
-The inspiration for this project was a paper by Richard Bird which implemented a solution to the puzzle game Sudoku as an example of a series of problems known as functional pearls. This sections will explore the topic of functional pearls and their relevance to the current project. Functional Pearls begin as small problems which programmers wish to explore, focusing on brief but engaging examples that showcase either a guided explanation to a proof or presenation of unique data structures. The goal of a functional pearl is to teach important programming techniques and fundamental design principles \cite{Pearls}.  Richard Bird described functional pearls in a speech as 'elegant, instructive exampels of functional programming' while showcasing his implementation of a sudoku solution\cite {R. Bird Speech}.
+The inspiration for this project was a paper by Richard Bird which implemented a solution to the puzzle game Sudoku as an example of a series of problems known as functional pearls. This section will explore the topic of functional pearls and their relevance to the current project. Functional Pearls begin as small problems which programmers wish to explore, focusing on brief but engaging examples that showcase either a guided explanation to a proof or presentation of unique data structures. The goal of a functional pearl is to teach important programming techniques and fundamental design principles \cite{Pearls}. Richard Bird described functional pearls in a speech as 'elegant, instructive examples of functional programming' while showcasing his implementation of a sudoku solution\cite {R. Bird Speech}.
+
 
 The solution which this project aims to explore would enter the scope of a functional pearl due to its aim to document an example of functional programming. The project would however deviate from a traditional functional pearl as the scope would be expanded to consider similar solutions in the problem space to evaluate the different methods of solving Mastermind.
 
@@ -404,20 +409,20 @@ This function would take an input in the form of a Sudoku board, represented by 
 \[ Sudoku :: Board \rightarrow [Board]\]
 \[ Sudoku = map (map head) \bullet search \bullet prune \bullet choices\]
 
-where search, prune and choices representing functions declared earlier in the implementation. This sudoku solutions provide an example of how the mastermind solution this project aimst to implement may be approached. Aiming for a solution that resembles this process of declaring an initial function or set of functions then deriving a defintion for them that can be evaluated through comparison with similar solutions. The next section will examine the problem that this project will aim to solve and the work that has been explored in the area previously.
+where search, prune and choices representing functions declared earlier in the implementation. These sudoku solutions provide an example of how the mastermind solution this project aims to implement may be approached. Aiming for a solution that resembles this process of declaring an initial function or set of functions then deriving a definition for them that can be evaluated through comparison with similar solutions. The next section will examine the problem that this project will aim to solve and the work that has been explored in the area previously.
 
 \subsection {Applications Beyond Mastermind}
 
 \subsubsection {Mastermind Complexity Class}
-Mastermind belongs to a class of problems known as NP-Complete decision problems. This means that they are solveable in exponential time. A solution to Mastermind in polynomial time
+Mastermind belongs to a class of problems known as NP-Complete decision problems. This means that they are solvable in exponential time. A solution to Mastermind in polynomial time
 would be an incredibly valuable resource as it would be proof that P = NP. This meaning that for all problems in class NP which are verifiable in polynomial time there exists a polynomial
-solution to the problem. It is currently not known if this hypothesis that P = NP is true however it would be a great benefit to computer science as it would allow for problems such as 
-protein folding to be solved however it would also mean that encryption, a security method which relies on P != NP, would be rendered obselete.
+solution to the problem. It is currently not known if this hypothesis that P = NP is true however it would be a great benefit to computer science as it would allow for problems such as
+protein folding to be solved however it would also mean that encryption, a security method which relies on P != NP, would be rendered obsolete.
 
 \newpage                     % optional page break
 \section{Research Methodology and Requirements Analysis}\label{ss:back}
 
-The scope of a Mastermind solution should focus on the combinatorial problem of how the search space, the set of all possible combinations, should be traversed. As has been explored in the background material the ability to navigate the possible combinations and the hints derived is integral to evaluating the correct steps to take to minimize the distance to a combination which matches the secret code. The research methodologies described in this chapter will propose several questions that this project hopes to answer through its implementation of a unique solution to the Mastermind puzzle. In support of these questions the requirements of the system which will be used to explore the research methodology will also be described.
+The scope of a Mastermind solution should focus on the combinatorial problem of how the search space, the set of all possible combinations, should be traversed. As has been explored in the background material the ability to navigate the possible combinations and the hints derived is integral to evaluating the correct steps to take to minimise the distance to a combination which matches the secret code. The research methodologies described in this chapter will propose several questions that this project hopes to answer through its implementation of a unique solution to the Mastermind puzzle. In support of these questions the requirements of the system which will be used to explore the research methodology will also be described.
 
 \subsection {Research Methodology}
 
@@ -445,7 +450,7 @@ When approaching a large set of elements it is important to understand why a spe
 
 \
 
-If the implementation derived from this project are able to return a positive development in finding a solution to the Mastermind puzzle it should be noted to what extent the specific paradigm of functional programming is able to provide support. Following from this it can be investigated if the unique behaviours of functional programming provide benefits which would lend itself to being the optimal tool for further research into the area.
+If the implementation derived from this project is able to return a positive development in finding a solution to the Mastermind puzzle it should be noted to what extent the specific paradigm of functional programming is able to provide support. Following from this it can be investigated if the unique behaviours of functional programming provide benefits which would lend itself to being the optimal tool for further research into the area.
 \subsection {Requirements Analysis}
 
 \subsubsection {MoSCoW Prioritisation}
@@ -507,7 +512,7 @@ The organisation of this project is represented by the following Gantt Chart, by
 
 \
 
-It is important that each major milestone of the project is following by a brief review period. The reasons for this is to examine the schedule and provide mitigatin measures if required.
+It is important that each major milestone of the project is followed by a brief review period. The reason for this is to examine the schedule and provide mitigation measures if required.
 
 \subsection {Risk Analysis and Mitigations}
 
@@ -515,7 +520,7 @@ It is important that each major milestone of the project is following by a brief
 To manage the progress of this project efficiently it was important to identify possible risks that could prevent the realisation of the goals laid out earlier in this document. To aid in the identification of the risks the following key was used to classify the associated risks:
 \begin{itemize}
 \item{People (P) - Risks which are the result of issues related to those individuals involved in the project. This relates to the wellbeing, scheduling and personal issues that can be encountered.}
-\item{Technological (T) - Risks which can result from the technology being used to engineer the solutions. This relates to the technologial constraints that could be encountered or the hardware required.}
+\item{Technological (T) - Risks which can result from the technology being used to engineer the solutions. This relates to the technological constraints that could be encountered or the hardware required.}
 \item{Requirement (R)  - Risks which can result from changes to the requirements of the project. This relates to problems encountered with the work being implemented for the project. Logical problems and issues with the material involved would be included in these risks.}
 \end{itemize}
 
@@ -543,9 +548,9 @@ To manage the progress of this project efficiently it was important to identify 
 	\hline
 	P.1 & Illness and Health Complications & The situation in which an individual involved in the project is unable to contribute due to illness or health complications. This risk is slightly heightened as the world recovers from the effects of the Covid-19 pandemic however it also considers other conditions which would require time away from the project. \\
 	\hline
-	T.1 & File Loss & This is the situation in which files or documents relating to the project is lost. This is a low priority issue as precautions have been taken to mitigate this such as using version control through Github. \\
+	T.1 & File Loss & This is the situation in which files or documents relating to the project are lost. This is a low priority issue as precautions have been taken to mitigate this such as using version control through Github. \\
 	\hline
-	R.1 & Insufficient Base Solution & The success of this project is dependant on having a solid base solution. The success of the base solution is assessed by a set of conditions which deems it suitable for solving the problem. The base solution being unable to meet this conditions is a serious situation and as such should be of a high priority. \\
+	R.1 & Insufficient Base Solution & The success of this project is dependent on having a solid base solution. The success of the base solution is assessed by a set of conditions which deems it suitable for solving the problem. The base solution being unable to meet these conditions is a serious situation and as such should be of a high priority. \\
 	\hline
 \end{tabularx}
 
@@ -623,7 +628,7 @@ https://web.archive.org/web/20070812104420/http://dspace.dial.pipex.com/town/roa
 
 \bibitem {Nelson}
 Nelson, Toby.
-{\em 'Investigations into the Master Mind Board Game'}
+{\em 'Investigations into the MasterMind Board Game'}
 https://web.archive.org/web/20150906043015/http://www.tnelson.demon.co.uk/mastermind/index.html
 (1999, Archived 2015)
 
