--- a/Deliverable 1.tex
+++ b/Deliverable 1.tex
@@ -422,6 +422,8 @@ protein folding to be solved however it would also mean that encryption, a secur
 \newpage                     % optional page break
 \section{Research Methodology and Requirements Analysis}\label{ss:back}
 
+The base goal of this project is t
+
 The scope of a Mastermind solution should focus on the combinatorial problem of how the search space, the set of all possible combinations, should be traversed. As has been explored in the background material the ability to navigate the possible combinations and the hints derived is integral to evaluating the correct steps to take to minimise the distance to a combination which matches the secret code. The research methodologies described in this chapter will propose several questions that this project hopes to answer through its implementation of a unique solution to the Mastermind puzzle. In support of these questions the requirements of the system which will be used to explore the research methodology will also be described.
 
 \subsection {Research Methodology}
